updated jquery, cleaned code, still collapsing issue

--- a/sai/page/css/sai.css
+++ b/sai/page/css/sai.css
@@ -1,21 +1,3 @@
-#sai_logo {
-    padding-left: 10px;
-    float: left;
-    padding-top: 8px;
-    padding-right: 10px;
-}
-#sai_brand{
-    width: 170px;
-}
-
-.sai_wrapper {
-    margin-top: 50px;
-}
-
-#sai_navbar{
-    height:40px;
-}
-
 #project_navbar{
 /*    width:224px;*/
 /*    position: fixed;*/
@@ -34,7 +16,6 @@
     color: #777;
 }
 
-
 .carousel-img{
     width: 1200px;
     height: 650px;
@@ -50,4 +31,73 @@
 .sai_p_modules:active {
     border-right: 3px solid #1C569C;
     border-left: 0;
+}
+
+.well {
+    margin-right: 5px;
+}
+
+/* columns of same height styles */
+
+.row-full-height {
+  height: 100%;
+}
+.col-full-height {
+  height: 100%;
+}
+.row-same-height {
+  display: table;
+  width: 100%;
+  /* fix overflow */
+  table-layout: fixed;
+}
+.col-xs-height {
+  display: table-cell;
+  float: none !important;
+}
+
+@media (min-width: 768px) {
+  .col-sm-height {
+    display: table-cell;
+    float: none !important;
+  }
+}
+@media (min-width: 992px) {
+  .col-md-height {
+    display: table-cell;
+    float: none !important;
+  }
+}
+@media (min-width: 1200px) {
+  .col-lg-height {
+    display: table-cell;
+    float: none !important;
+  }
+}
+
+/* auto collapsing navbar */
+
+#sys_autocollapse.collapsed .navbar-header {
+  float: none;
+}
+#sys_autocollapse.collapsed .navbar-toggle {
+  display: block;
+}
+#sys_autocollapse.collapsed .navbar-collapse {
+  border-top: 1px solid transparent;
+  box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+}
+#sys_autocollapse.collapsed .navbar-collapse.collapse {
+  display: none!important;
+}
+#sys_autocollapse.collapsed .navbar-nav {
+  float: none!important;
+  margin: 7.5px -15px;
+}
+#sys_autocollapse.collapsed .navbar-nav>li {
+  float: none;
+}
+#sys_autocollapse.collapsed .navbar-nav>li>a {
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
